--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </header>
 
     <div class="banner">
-        <img src="file:///C:/Users/Usu%C3%A1rio/Desktop/Trabalho%20WebLow/imagens/banner.png" alt="Banner do Jogo" width="100%">
+        <img src="imagens/banner.png" alt="Banner do Jogo" width="100%">
     </div>
 
     <section class="hero">
-        <img src="file:///C:/Users/Usu%C3%A1rio/Desktop/Trabalho%20WebLow/imagens/000.png" alt="Personagem do jogo">
+        <img src="imagens/000.png" alt="Personagem do jogo">
         <h2>Bem-vindo ao Mundo de Aventuras!</h2>
         <button onclick="playGame()">Jogar Agora</button>
     </section>
@@ -37,7 +37,7 @@
         <div class="conteudo">
             <p>King’s Strike é um jogo indie que coloca você no papel de um bravo rei em uma jornada épica para resgatar a princesa, que foi capturada por temíveis porcos do mal. Em um mundo repleto de desafios e perigos, você enfrentará grandes obstáculos, precisando usar sua coragem e habilidades para superar cada inimigo no caminho.
                 Com uma jogabilidade envolvente e cheia de ação, King’s Strike proporciona uma experiência incrível, onde cada batalha vencida o aproxima de uma recompensa inesquecível. Prepare-se para viver essa grande aventura e provar que um verdadeiro rei nunca abandona sua missão! </p>
-            <img src="file:///C:/Users/Usu%C3%A1rio/Desktop/Trabalho%20WebLow/imagens/Jogo.jpg">
+            <img src="imagens/Jogo.jpg">
         </div>
     </section>
 
@@ -47,7 +47,7 @@
             <p>A MAG é uma desenvolvedora de jogos independente que está dando seu primeiro grande passo no mundo dos games! Com muita dedicação e paixão pela indústria, estamos lançando nosso primeiro jogo, marcando o início de uma jornada cheia de desafios e conquistas.
                 Nosso objetivo é crescer, inovar e nos consolidar no mercado, sempre entregando experiências imersivas e envolventes para nossos jogadores. Acreditamos que o sucesso vem com a troca de ideias, por isso valorizamos cada opinião e feedback da nossa comunidade. Queremos construir jogos incríveis e, acima de tudo, proporcionar momentos de diversão para todos os nossos players.
                 Junte-se a nós nessa aventura e ajude a moldar o futuro da MAG! </p>
-            <img src="file:///C:/Users/Usu%C3%A1rio/Desktop/Trabalho%20WebLow/imagens/desenvolvedor.webp">
+            <img src="imagens/desenvolvedor.webp">
         </div>
     </section>
 
