--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         });
 
         function playGame() {
-            window.open('file:///C:/Users/Usu%C3%A1rio/Desktop/Trabalho%20WebLow/Jogo/index.html', '_blank');
+            window.open('jogo/index.html', '_blank');
         }
     </script>
 </body>
