--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kings Strike</title>
+    <link rel="icon" href="imagens/Jogador_Dialogo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -51,6 +52,19 @@
         </div>
     </section>
 
+    <div class="form-container">
+        <h1>Cadastre-se</h1>
+        <form id="form">
+            <label>Nome:</label>
+            <input type="text" id="nome">
+            <label>Email</label>
+            <input type="email" id="email">
+            <label>Telefone</label>
+            <input type="tel" id="telefone">
+            <button type="button" id="botao">Enviar</button>
+        </form>
+    </div>
+
     <div id="location-info">
         <div id="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3643.2954568774867!2d-52.371553724874836!3d-24.055897878463174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ed7551b187ab21%3A0xddad38cc311ec63a!2sR.%20das%20Seringueiras%2C%20943%20-%20Jardim%20Araucaria%2C%20Campo%20Mour%C3%A3o%20-%20PR%2C%2087301-328!5e0!3m2!1spt-BR!2sbr!4v1743612585825!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -63,6 +77,18 @@
         </div>
     </div>
 
+    <footer style="text-align: center; padding: 20px;">
+        <a href="https://www.instagram.com/matt___ang/" target="_blank" style="margin: 0 10px; color: inherit;">
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com/matheus.angelo.566/" target="_blank" style="margin: 0 10px; color: inherit;">
+          <i class="fab fa-facebook fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/matheus-angelo-211413186/" target="_blank" style="margin: 0 10px; color: inherit;">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+      </footer> 
+
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const mainNav = document.querySelector('.main-nav');
@@ -72,7 +98,21 @@
         });
 
         function playGame() {
-            window.open('jogo/index.html', '_blank');
+            window.open('Jogo/index.html', '_blank');
+        }
+
+        document.getElementById('botao').onclick = function () {
+
+            var nome = document.getElementById('nome').value;
+            var email = document.getElementById('email').value;
+            var telefone = document.getElementById('telefone').value;
+            
+            if(nome === "" || email === "" || telefone === ""){
+                alert('Um ou mais campos faltam ser preenchidos, Por favor os preencha e tente novamente!');
+            }else{
+                alert('Formulario preenchido com Sucesso!')
+            }
+
         }
     </script>
 </body>
