--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="#jogo">Sobre o Jogo</a></li>
-                    <li><a href="#sobre">Quem Somos</a></li>
+                    <li><a href="#sobre">Sobre mim</a></li>
                     <li><a href="#location-info">Localização</a></li>
                 </ul>
             </nav>
@@ -43,12 +43,12 @@
     </section>
 
     <section id="sobre">
-        <h2>Quem Somos</h2>
+        <h2>Sobre mim</h2>
         <div class="conteudo">
-            <p>A MAG é uma desenvolvedora de jogos independente que está dando seu primeiro grande passo no mundo dos games! Com muita dedicação e paixão pela indústria, estamos lançando nosso primeiro jogo, marcando o início de uma jornada cheia de desafios e conquistas.
-                Nosso objetivo é crescer, inovar e nos consolidar no mercado, sempre entregando experiências imersivas e envolventes para nossos jogadores. Acreditamos que o sucesso vem com a troca de ideias, por isso valorizamos cada opinião e feedback da nossa comunidade. Queremos construir jogos incríveis e, acima de tudo, proporcionar momentos de diversão para todos os nossos players.
-                Junte-se a nós nessa aventura e ajude a moldar o futuro da MAG! </p>
-            <img src="imagens/desenvolvedor.webp">
+            <p>Meu nome é Matheus, tenho 24 anos, sou nascido e criado na grande São Paulo e moro em campo Mourão a 10 anos. Atualmente, faço faculdade de Tecnologia Análise e desenvolvimento de Sistemas, mas ja fiz 2 anos de Ciências da computação pela UTFPR (Universidade Tecnologica Federal do Paraná). Tenho como Hobbie, Musica, esportes principalmente o Volei e Basquete e jogar xadrez.
+                
+            </p>
+            <img src="imagens/482248797_28719345434379307_2862785834174299491_n.jpg">
         </div>
     </section>
 
